cli/tests/unstable_disabled.out
[WILDCARD]
error TS2339: Property '__unstable' does not exist on type 'typeof Deno'.
console.log(Deno.__unstable);
                 ~~~~~~~~~~
    at [WILDCARD]/cli/tests/unstable.ts:1:18
